--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-    "routes": [
-        { "src": "/(.*)", "dest": "index.php" }
+    "builds": [
+        { "src": "Dockerfile", "use": "@vercel/docker" }
     ]
 }
